uncompressed run result